# rudevolution

./: Cargo.toml  LICENSE  README.md
benches/: bench_parser.rs  bench_pipeline.rs
dashboard/: README.md  package-lock.json
dashboard/.claude-flow/data/: pending-insights.jsonl
dashboard/src/lib/: module-splitter.ts
data/: claude-code-patterns.json
docs/adr/: ADR-135-mincut-decompiler-with-witness-chains.md  ADR-137-npm-decompiler-cli-and-mcp.md
docs/research/claude-code-rvsource/: 01-overview-and-binary-structure.md  02-tool-system.md  03-agent-loop-and-execution-flow.md  04-permission-system.md  05-mcp-integration.md  06-hooks-system.md  07-context-and-session-management.md  08-configuration-and-environment.md  09-agent-and-subagent-system.md  10-models-and-api.md  11-telemetry-and-observability.md  12-dependency-graph.md  13-extension-points.md  14-source-extraction.md  15-core-module-analysis.md  16-call-graphs.md  17-class-hierarchy.md  18-state-machines.md  19-ruvector-integration-guide.md
npm/src/decompiler/: module-splitter.js  module-tree.js  name-predictor.js  reconstructor.js  (+5 more)
npm/test/: decompiler-reconstruction.js
scripts/: claude-code-decompile.sh  claude-code-rvf-corpus.sh
scripts/lib/: module-splitter.mjs  rvf-builder.mjs
scripts/training/: Dockerfile.deobfuscator  generate-deobfuscation-data.mjs  launch-gpu-training.sh  train-deobfuscator.py
src/: error.rs  graph.rs  inferrer.rs  lib.rs  parser.rs  partitioner.rs  sourcemap.rs  training.rs  tree.rs  types.rs  witness.rs
tests/: ground_truth.rs  integration.rs  real_world.rs
(+46 files in other folders)
